--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--meta tags for search engines-->
-    <meta name="description" content="Love Running. Club for runners in Dublun, Ireland, Urban running, trail runnung, Dublin dockland and Phoenix Park">
-    <meta name="keywords" conent="love running, run, runners,Ireland, Dublin, sport, exercise">
-     <!--Title-->
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title -->
     <title>Love Running</title>
-    <!--Favicon-->
+    <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/Images /favicon-zip/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/Images /favicon-zip/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/Images /favicon-zip/favicon-16x16.png">
   
 
 </head>
-<body>
 
+<body>
+    <!-- Header -->
     <header>Header</header>
 
-    <main>Main Content</main>
+    <!-- Main content -->
+    <main>Main content</main>
 
+    <!-- Footer -->
     <footer>Footer</footer>
-    
 </body>
+
 </html>
