--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label">
+          <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -40,7 +42,32 @@
     <main>Main content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href= "https://www.facebook.com/"target="_blank" rel="noneopener" 
+                aria-label="Visit our Facebook page (opens new tab)">
+                <i class="fa-brands fa-facebook"></i></a>
+            </li>
+
+            <li><a href= "https://www.facebook.com/"target="_blank" rel="noneopener" 
+                aria-label="Visit our Instagram page (opens new tab)">
+                <i class="fa-brands fa-instagram"></i></a>
+            </li>
+
+            <li><a href= "https://www.facebook.com/"target="_blank" rel="noneopener" 
+                aria-label="Visit our Twitter page (opens new tab)">
+                <i class="fa-brands fa-twitter"></i></a>
+            </li>
+
+            <li><a href= "https://www.facebook.com/"target="_blank" rel="noneopener"
+                 aria-label="Visit our Tiktok page (opens new tab)">
+                 <i class="fa-brands fa-tiktok"></i></a>
+           </li>
+        </ul>
+    </footer>
+
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/1f216d63e7.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
