--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Sign Up</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +43,7 @@
 
     <!-- Footer -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href= "https://www.facebook.com/"target="_blank" rel="noneopener" 
                 aria-label="Visit our Facebook page (opens new tab)">
                 <i class="fa-brands fa-facebook"></i></a>
