--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/Images /favicon-zip/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/Images /favicon-zip/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/Images /favicon-zip/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/favicon-zip/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-zip/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-zip/favicon-16x16.png">
   <link rel="stylesheet" href="assets/css/styles.css">
 
 </head>
@@ -39,7 +39,46 @@
     </header>
 
     <!-- Main content -->
-    <main>Main content</main>
+    <main>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+            </div>
+        </section>
+         <section id="reasons">
+            <h2>Why love running with us?</h2>
+            <div id="benefits">
+                <div id="benefits-physical">
+                    <div>
+                        <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
+                        <hr>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                            health. Plus, it burns calories and can build strength.</p>
+                    </div>
+                    <div>
+                        <h3>Feel strong <i class="fa-solid fa-dumbbell"></i></h3>
+                        <hr>
+                        <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
+                    </div>
+                </div>
+                <div id="benefits-mental">
+                    <div>
+                        <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
+                        <hr>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins
+                            make you more energetic, more awake and, yes, happier.</p>
+                    </div>
+                    <div>
+                        <h3>Get social <i class="fa-solid fa-globe"></i></h3>
+                        <hr>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull
+                            you out of a running funk or low mood, and inspire you to try new events.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
@@ -49,7 +88,7 @@
                 <i class="fa-brands fa-facebook"></i></a>
             </li>
 
-            <li><a href= "https://www.facebook.com/"target="_blank" rel="noneopener" 
+            <li><a href= "https://www.instagram.com/"target="_blank" rel="noneopener" 
                 aria-label="Visit our Instagram page (opens new tab)">
                 <i class="fa-brands fa-instagram"></i></a>
             </li>
