--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -49,10 +49,8 @@
                 <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
                 <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
                 <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
-                <img src="assets/images/running_gang.webp"
-                    alt="Large group of runners taking part in a marathon on a rainy day">
-                <img src="assets/images/mud-run.webp"
-                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+                <img src="assets/images/running_gang.webp" alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp" alt="Two women runners taking a muddy selfie after the Mud Runners championship">
             </div>
         </section>
     </main>
